2005-05-23 19:36  PeterB

	* configure.in, libbalsa/address-book-gpe.c,
	libbalsa/address-book-gpe.h, src/address-book-config.c: support
	SQLite Version 3--fixes bug 305152.
	* libbalsa/libbalsa-conf.c: compile on systems where gsize !=
	guint.

2005-05-22 17:11  PeterB

	* libbalsa/: Makefile.am, body.c, gmime-part-rfc2440.c, html.c,
	mailbox_imap.c, mailbox_maildir.c, mailbox_mbox.c, mailbox_mh.c,
	message.c, mime-stream-shared.c, mime-stream-shared.h, rfc3156.c,
	send.c: implement LibBalsaMimeStreamShared, a subclass of
	GMimeStreamFs with a lock; use it in LibBalsaMailboxMbox in place
	of the fine-grained mailbox lock.

2005-05-21  Pawel Salek

	* libbalsa/mailbox_imap.c: get properly signed parts.
	* src/balsa-message.c: do not reset status of a checked sig.

2005-05-21 09:41  PeterB

	* src/save-restore.c: save message counts only when they are
	time-stamped.

2005-05-20 23:56  PeterB

	* libbalsa/mailbox.c, libbalsa/mailbox.h,
	libbalsa/mailbox_maildir.c, libbalsa/mailbox_maildir.h,
	libbalsa/mailbox_mbox.c, libbalsa/mailbox_mh.c,
	libbalsa/mailbox_mh.h, src/save-restore.c: save and restore
	mod_time for local mailboxes.

2005-05-12 18:08  PeterB

	* libbalsa/mailbox_mbox.c: use light-weight parser at get-message
	time.
	* src/save-restore.c: really remove unused mailbox views.
	* libbalsa/address-book-extern.c: fix last part of bug 155382.

2005-05-09 08:32  PeterB

	* src/balsa-index.c: non-modal pipe-message dialog.

2005-05-07  Pawel Salek

	* libbalsa/libbalsa{,-conf}.c: disable debugging output.
	* NEWS, configure.in: release 2.3.2

2005-05-07  Pawel Salek

	* balsa.1.in: merge patch in DBTS #269787, bugzilla 303422.
	* libbalsa/address-book-extern.c: fix DBTS#306556, bugzilla 303421.
	* libbalsa/address-book-gpe.c: remove duplicates from the returned list.
	* src/ab-window.c: select initially displayed list in the combo.
	* src/address-book-config.c: fix bad_path() for gtk < 2.6.0.
	* src/pref-manager.c: Display type of extern address book.